# progress-vault

./: .gitignore  README.md  package-lock.json  package.json
docs/iteration-1/: flow-diagram.drawio  requirements-and-progress.md  structs-diagram.drawio  use-case-diagram.drawio
docs/iteration-2/: requirements-and-progress.md  use-case-diagram.drawio
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  goals.rs  mod.rs
src-tauri/src/models/: config.rs  goal.rs  mod.rs
src-tauri/src/storage/: config_store.rs  json_store.rs  mod.rs
src/components/: ConfigScreen.svelte  CreateGoalModal.svelte  DashboardView.svelte  EyePair.svelte  GoalCard.svelte  GoalDetail.svelte  WelcomeScreen.svelte
src/lib/: api.js  dashboardPrefs.js  themes.js
src/routes/: +page.svelte
